# Guitar_Project

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.sandbox  OPENCLAW_MEMORY.md  README.md  docker-compose.yml  guitar-pipeline.cron.json  index.html  irealpro.md  mvp.md  openclaw_cron_pipeline.md  phase2.md  pipeline-state.md
.claude/agents/: chord-recognizer-agent.md  fingering-coach-agent.md  hardware-bridge-agent.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
Tunerapp/: Dockerfile  display.html  index.html  input.html  package.json  server.js
UnityApp/: CONTEXT_WINDOWS_SOURCE.md  SYNC_POLICY.md
UnityApp/Assets/: MainScene.unity
UnityApp/Assets/Data/: ChordDatabase.asset  FretboardConfig.asset
UnityApp/Assets/Plugins/WebGL/: LocalStorage.jslib
UnityApp/Assets/Prefabs/: ChordSlot.prefab  FretMarker 1.prefab  FretMarker.prefab
UnityApp/Assets/Scenes/: SampleScene.unity
UnityApp/Assets/Scripts/API/: AIClient.cs
UnityApp/Assets/Scripts/Data/: ChordData.cs  ChordDatabase.cs  FretPosition.cs  (+1 more)
api/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
api/tests/: test_session.py  test_songs.py
codex/: AGENTS.md
gemini/: GEMINI.md
scripts/: cron_run.sh  migrate_openclaw_to_docker.sh  openclaw-sandbox.sh  register_pipeline_jobs.py  run_p2_sequential.sh  sync_unity_from_windows.sh  sync_unity_to_windows.sh
unity-specs/: B4a-songdata-cs.md  B4b-songselector-ui.md  B5a-practiceconfig.md  B5b-session-update.md  B6-transpose.md
(+21 files in other folders)
