[project]
name = "guitar-practice-ai-api"
version = "1.0.0"
description = "AI-powered guitar practice API with FastAPI"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
ai = [
    "openai>=1.10.0",
    "anthropic>=0.8.1",
    "langchain>=0.1.0",
]

db = [
    "pymongo>=4.6.1",
    "motor>=3.3.2",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = []
